Fixed so that our instrumentation library isn't built as an Qt target, by setting CMAKE_AUTOMOC to OFF in the CMakeLists.txt for the library

--- a/dep/instrumentation/CMakeLists.txt
+++ b/dep/instrumentation/CMakeLists.txt
@@ -1,5 +1,11 @@
 cmake_minimum_required(VERSION 3.15)
 project(instrumentation)
+
+# We need to specifically turn this off for our simple instrumentation library, as it really has nothing to do with Qt. I don't know how to set this variable on a per-target specific level.
+set(CMAKE_AUTOMOC OFF)
+set(CMAKE_AUTORCC OFF)
+set(CMAKE_AUTOUIC OFF)
+
 set(CMAKE_CXX_STANDARD 17)
 set(SOURCES instrumentation.cpp instrumentation.h)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
