Added submodule json

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,14 @@
-[submodule "nlohmann::json"]
-	path = dep/json
-	url = https://github.com/nlohmann/json
+[submodule "dep/json"]
+        path = dep/json
+        url = https://github.com/nlohmann/json.git
+
+
+
+
+
+
+
+
+
+
+
